Fix padding of sidebar button in Chrome
In Chrome, when the header was collapsed, the sidebar button looked
off-center.

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -48,6 +48,11 @@ body > header {
         transition: opacity 0.5s ease;
     }
 
+    #toggle_sidebar_btn {
+        padding-left: 4px;
+        width: var(--header-height);
+    }
+
     word-wrap: break-word;
     width: var(--header-height);
     padding: 0;
